fix header nav align

--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -77,6 +77,7 @@ $mail-icon: '../img/icons/mail.png';
 }
 
 .nav {
+    margin-right: -20px;
     &__list-item {
         position: relative;
         text-transform: uppercase;
